Ajusted the css to make sure the icons in the footer, wraps if there's more than 5.

--- a/assets/src/scss/layout/footer.scss
+++ b/assets/src/scss/layout/footer.scss
@@ -146,6 +146,7 @@
 
 .footer-social {
   display: flex;
+  flex-flow: wrap;
   font-size: 1em;
   gap: fix-font-size-hack(0.75em);
   justify-content: flex-start;
@@ -395,8 +396,6 @@
   }
 
   .footer-social {
-    justify-content: flex-end;
-    gap: fix-font-size-hack(1.175em);
     margin-bottom: 0;
     margin-top: fix-font-size-hack(-0.5em);
   }
